<resources>
    <string name="app_name">CFMS</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="problemi_di_collegamento">Unable to connect to server</string>
    <string name="asset_non_trovato">Asset not found</string>
    <string name="barcode">Bar Code</string>
    <string name="confirmsafetycheck">Do you confirm that you are compliant with the following safety rules ?</string>
    <string name="confirmopcheck">Please confirm that you have completed these operations</string>
    <string name="checklist_sicurezza">Security Checklist:</string>
    <string name="data_pianificata">Data pianificata:</string>
    <string name="selezionare_esito_intervento">Select intervention outcome</string>
    <string name="esito_selezionato">Selected Outcome:</string>
    <string name="pianifica_nuovo_intervento">Plan new intervention</string>
    <string name="conferma_ed_esci">Confirm and exit</string>
    <string name="esci_senza_confermare">Exit without confirming</string>
    <string name="allega_foto">Attach photo</string>
    <string name="insert_commento">Inserire commento</string>
    <string name="interventi_todo">Interventi To do</string>
    <string name="interventi_prev">Interventi Precedenti</string>
    <string name="are_you_wearing">Are you wearing</string>
</resources>
